# choose

./: .dnt.db  .gitignore  Makefile.am  Makefile.sub  THANKS  choose.in  choose.sh.in  choose2h.in  choose2h.sh.in  choose2python.in  configure.ac
lkc/: Makefile.am  conf.c  confdata.c  expr.c  mconf.c  menu.c  util.h  zconf-parser.y  zconf-scanner.l
lkc/lxdialog/: dialog.h  inputbox.c
packrules/: Makefile.am  packrules-common.cxx  packrules-common.h  packrules-main.cxx  packrules-stream.cxx  packrules-stream.h
tools/: Makefile.am
tools/autotools/m4/: Makefile.am  ax_check_curses.m4
tools/maint/: Makefile.am
